src/test/ui/associated-types/higher-ranked-projection.bad.stderr
error[E0308]: mismatched types
  --> $DIR/higher-ranked-projection.rs:25:5
   |
LL |     foo(());
   |     ^^^ one type is more general than the other
   |
   = note: expected type `Mirror`
              found type `Mirror`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
